# vibe-coding-prompt

./: .gitignore  AGENTS.md  Makefile  README.md  origin_model_prompt.md  origin_prompt  origin_prompt.md  prompt.md  prompt_v6.md  pyproject.toml  temp_origin_model_prompt.md  temp_v2_origin_model_prompt.md  temp_v3_origin_model_prompt.md  temp_v4_origin_model_prompt.md  temp_v5_origin_model_prompt.md  temp_v6_origin_model_prompt.md  temp_v7_origin_model_prompt.md  v2.md  v4.md  v5.md  v6.md  v7.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GLOSSARY.md  KNOWLEDGE_BASE.md  PROJECT_OVERVIEW.md  TESTING.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/development/: QUALITY_GATES.md
docs/knowledge/: KNOWLEDGE_BASE.md
docs/operations/: RUNBOOK.md
docs/overview/: PROJECT_OVERVIEW.md
metadata/: repository-index.json
prompts/: README.md
schemas/: decisions.schema.json  execution-slices.schema.json  execution_slice.schema.json  knowledge-entry.schema.json  knowledge_entry.schema.json  requirement-ledger.schema.json  requirement.schema.json  research-notes.schema.json  status.schema.json
scripts/: check.ps1  next.ps1
skills/execution-slice-runner/: SKILL.md
skills/vibe-project-kickoff/: SKILL.md
src/vibe_coding_infra/: __init__.py  cli.py  knowledge.py  models.py  quality.py  (+4 more)
tests/: test_knowledge.py  test_knowledge_base.py  test_security_quality.py  test_state.py  test_text.py  test_validator.py
tmp/: origin_model_prompt.md
tools/: README.md
vibe_coding_infra/: __init__.py  cli.py  io.py  knowledge_base.py  models.py  state.py  validator.py
(+31 files in other folders)
