[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding-infra"
version = "0.1.0"
description = "Vibe Coding prompt, state, and quality-gate infrastructure."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Vibe Coding Infrastructure" }]
dependencies = []

[project.scripts]
vibe-infra = "vibe_coding_infra.cli:main"

[tool.setuptools]
packages = ["vibe_coding_infra"]
