[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding-infra"
version = "0.1.0"
description = "Local infrastructure for governed agentic coding workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vibe Coding Maintainers" }]
license = { text = "MIT" }
keywords = ["agentic-coding", "rag", "knowledge-base", "quality-gate"]
dependencies = []

[project.scripts]
vibe = "vibe_coding_infra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
